# DecoderTCR

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
Demo/: quick_start.ipynb
Demo/sample_data/: A0252_heldout.csv  A3301_heldout.csv  A3401_heldout.csv  A6601_heldout.csv  B1805_heldout.csv  B3905_heldout.csv  B4405_heldout.csv  C0302_heldout.csv  C0602_heldout.csv  DPA10103__DPB10601_heldout.csv  DQA10201__DQB10303_heldout.csv  DRA0101__DRB10403_heldout.csv  DRA0101__DRB11202_heldout.csv  DRA0101__DRB11303_heldout.csv  DRA0101__DRB11305_heldout.csv  GLC_validated.csv  YLQ_validated.csv  genes_pairs.csv
checkpoints/: README.md
docs/: README.md
results/: README.md
scripts/: download_weights.py  smoke_test.py
src/DecoderTCR/: __init__.py  api.py  constants.py
src/DecoderTCR/model/: DecoderTCR.py  DecoderTCRC.py  __init__.py  packed_flash_attention.py  tokenizer.py
src/DecoderTCR/reconstruct/: __init__.py  components.py  hla.py  tcr.py
src/DecoderTCR/reconstruct/data/: hla_reference.json
src/DecoderTCR/utils/: __init__.py  _predict_common.py  model_zoo.py  predict_TpM.py  predict_from_genes.py  predict_pMHC.py  scoring.py  tokenizer.py
src/esm/: __init__.py  modules.py  pretrained.py  rotary_embedding.py
src/esmc/: LICENSE.md
src/esmc/layers/: attention.py  blocks.py  rotary.py  transformer_stack.py
src/esmc/models/: esmc.py
src/esmc/tokenization/: __init__.py  sequence_tokenizer.py
src/esmc/utils/constants/: esm3.py  models.py
