[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "DecoderTCR"
version = "0.1.0"
description = "DecoderTCR"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "einops>=0.7",
  "fair-esm>=2.0",
  "lightning>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/DecoderTCR"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]
